@@ -10,7 +10,7 @@ Uploaders: Andreas Henriksson <andreas@fatal.se>, Iain Lane <laney@debian.org>, 
 Standards-Version: 3.9.6
 Build-Depends: dh-autoreconf,
                cdbs (>= 0.4.41),
-               debhelper (>= 9),
+               debhelper (>= 9.20160114),
                gnome-pkg-tools (>= 0.10),
                intltool (>= 0.50.0),
                appstream-util,
@@ -33,14 +33,3 @@ Description: simple configuration storage system - graphical editor
  environment settings.
  .
  This package contains a graphical editor for settings stored in dconf.
-
-Package: dconf-editor-dbg
-Section: debug
-Architecture: any
-Priority: extra
-Depends: dconf-editor (= ${binary:Version}), ${misc:Depends}
-Description: simple configuration storage system editor - debugging symbols
- DConf is a low-level key/value database designed for storing desktop
- environment settings.
- .
- This package debugging symbols for dconf's graphical editor.
