@@ -6,6 +6,10 @@ dconf-editor (3.20.1-1) UNRELEASED; urgency=medium
     - Drop libxml2-dev.
     - Bump libglib2.0-dev to (>= 2.46.0).
     - Bump libgtk-3-dev to (>= 3.19.5).
+  * Drop dconf-editor-dbg package now that we have automatic dbgsym packages.
+  * Ensure proper upgrade from dconf-editor-dbg to new dbgsym packages by
+    using dh_strip --dbgsym-migration. Bump Build-Depends on debhelper
+    accordingly.
 
  -- Michael Biebl <biebl@debian.org>  Sun, 17 Apr 2016 17:37:39 +0200
 
